--- a/twig/festival/overnatting_ledere.html.twig
+++ b/twig/festival/overnatting_ledere.html.twig
@@ -3,70 +3,45 @@
 <p>Når alle lederskjema er sendt inn av fylkene, og alle rombehov er registrert av UKM Norge kan dette excel-arket lastes ned og sendes til hotellet</p>
 <a href="{{excel_hotell_norge}}" class="btn btn-success">Last ned excel-ark for bestilling av hotell</a>
 
-<h3>Status enkeltrom</h3>
-<div class="UKMwidth">
-	<table class="table table-striped">
-		<thead>
-			<tr>
-				<th>Gruppe</th>
-				{% for natt in alle_netter %}
-					<th>{{natt.timestamp|dato('d.m')}}</th>
+{% for romtype,kapasitet in romtyper %}
+	<h3>Status {{ romtype }}rom</h3>
+	<div class="UKMwidth">
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Gruppe</th>
+					{% for natt in alle_netter %}
+						<th>{{natt.timestamp|dato('d.m')}}</th>
+					{% endfor %}
+					<th>Sum</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for gruppe,netter in count[romtype] if gruppe != 'total' %} 
+					{% set linjesum = 0 %}
+					<tr>
+						<td>{{gruppe|capitalize}}</td>
+						{% for natt in alle_netter %}
+							{% set linjesum = linjesum + count[romtype][gruppe][ natt.dag~'.'~natt.mnd ]|length %}
+							<td>{{count[romtype][gruppe][ natt.dag~'.'~natt.mnd ]|length}}</td>
+						{% endfor %}
+						<th>{{ linjesum }}</th>
+					</tr>
 				{% endfor %}
-			</tr>
-		</thead>
-		<tbody>
-			{% for gruppe,netter in count.enkel if gruppe != 'total' %} 
-				<tr>
-					<td>{{gruppe|capitalize}}</td>
-					{% for natt in alle_netter %} 
-						<td>{{count.enkel[gruppe][ natt.dag~'.'~natt.mnd ]}}</td>
-					{% endfor %}
-				</tr>
-			{% endfor %}
-		</tbody>
-		<tfoot>
-			{% for gruppe,netter in count.enkel if gruppe == 'total' %} 
-				<tr>
-					<th>{{gruppe|capitalize}}</th>
-					{% for natt in alle_netter %} 
-						<th>{{count.enkel[gruppe][ natt.dag~'.'~natt.mnd ]}}</th>
-					{% endfor %}
-				</tr>
-			{% endfor %}
-		</tfoot>
-	</table>
-</div>
-
-<h3>Status dobbeltrom</h3>
-<div class="UKMwidth">
-	<table class="table table-striped">
-		<thead>
-			<tr>
-				<th>Gruppe</th>
-				{% for natt in alle_netter %}
-					<th>{{natt.timestamp|dato('d.m')}}</th>
+			</tbody>
+			<tfoot>
+				{% for gruppe,netter in count[romtype] if gruppe == 'total' %} 
+					{% set linjesum = 0 %}
+					<tr>
+						<th>{{gruppe|capitalize}}</th>
+						{% for natt in alle_netter %} 
+							{% set linjesum = linjesum + count[romtype][gruppe][ natt.dag~'.'~natt.mnd ]|length %}
+							<th>{{count[romtype][gruppe][ natt.dag~'.'~natt.mnd ]|length}}</th>
+						{% endfor %}
+						<th>{{ linjesum }}</th>
+					</tr>
 				{% endfor %}
-			</tr>
-		</thead>
-		<tbody>
-			{% for gruppe,netter in count.enkel if gruppe != 'total' %} 
-				<tr>
-					<td>{{gruppe|capitalize}}</td>
-					{% for natt in alle_netter %} 
-						<td>{{count.dobbel[gruppe][ natt.dag~'.'~natt.mnd ]|length}}</td>
-					{% endfor %}
-				</tr>
-			{% endfor %}
-		</tbody>
-		<tfoot>
-			{% for gruppe,netter in count.enkel if gruppe == 'total' %} 
-				<tr>
-					<th>{{gruppe|capitalize}}</th>
-					{% for natt in alle_netter %} 
-						<th>{{count.dobbel[gruppe][ natt.dag~'.'~natt.mnd ]|length}}</th>
-					{% endfor %}
-				</tr>
-			{% endfor %}
-		</tfoot>
-	</table>
-</div>
+			</tfoot>
+		</table>
+	</div>
+{% endfor %}
