Støtte for å laste ned vCards

--- a/twig/festival/sveveeksport.html.twig
+++ b/twig/festival/sveveeksport.html.twig
@@ -1,5 +1,9 @@
 <h1>Last ned excel-ark for bruk med Sveve</h1>
 
+<p>
+	Last ned alle <a href="{{zip}}" target="_blank">som vCard-fil for kontakt-sync</a>
+</p>
+
 <ol class="list-unstyled">
 
 	{% for exp in excel %}
