Lenk mobilnummer til SMS-modulen
@AsgeirSH

--- a/twig/sms.html.twig
+++ b/twig/sms.html.twig
@@ -4,7 +4,7 @@
 		<tr>
 			<th align="left">{{ person.getInnslag() }}{#{ person.getId() }#}</th>
 			<td>{{ person.getNavn() }}</td>
-			<td class="UKMsms">{{ person.getMobil() }}</td>
+			<td class="UKMSMS">{{ person.getMobil() }}</td>
 			<td><a href="{{ person.getEpost() }}" class="UKMMAIL">{{ person.getEpost() }}</a></td>
 			<td>{{ person.getTypeNavn() }}</td>
 			<td>{{ person.getKommune() }}</td>
