Hent år dynamisk

--- a/twig/network/monstringer_per_fylke.html.twig
+++ b/twig/network/monstringer_per_fylke.html.twig
@@ -14,7 +14,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			{% for i in 2011..2015 %}
+			{% for i in startyear..stopyear %}
 				<tr>
 					<th>{{ i }}</th>
 					<td>
