--- a/twig/network/monstringer_per_fylke.html.twig
+++ b/twig/network/monstringer_per_fylke.html.twig
@@ -1,16 +1,16 @@
 <h1>Mønstringer per fylke</h1>
 
 {% for fylke in fylker %}
-	<h2>{{ fylke.info.getNavn() }} <small>{{ fylke.info.getKommuner().count() }}</small></h2>
+	<h2>{{ fylke.info.getNavn() }} <small>{{ fylke.info.getKommuner().count() }} kommuner</small></h2>
 	<table class="table table-striped">
 		<thead>
 			<tr>
 				<th>År</th>
 				<th>Kommuner som <br />skulle arrangere</th>
-				<th>Komuner som <br />arrangerte</th>
-				<th>Arrangerte<br />mønstringer</th>
+				<th>Komuner involvert <br />i en mønstring</th>
+				<th>Antall arrangerte<br />mønstringer</th>
 				<th class="text-danger">Uregistrerte<br />mønstringer</th>
-				<th class="text-danger">Uregistrerte<br /> kommuner</th>
+				<th class="text-danger">Kommuner involvert <br />uregistrerte kommuner</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -18,22 +18,10 @@
 				<tr>
 					<th>{{ i }}</th>
 					<td>
-						{{ fylke.monstringer[i].kommuner_registrert + fylke.monstringer[i].kommuner_uregistrert }}
-						<abbr title="av de {{ fylke.info.getKommuner().count() }} kommunene som finnes i {{ fylke.info.getNavn() }}">
-							av {{ fylke.info.getKommuner().count() }}
-						</abbr>
-						<small>
-							({{ ((100/fylke.info.getKommuner().count()) 
-									* 
-								(fylke.monstringer[i].kommuner_registrert + fylke.monstringer[i].kommuner_uregistrert)
-							)|round(1) }}%)
-						</small>
+						{{ fylke.info.getKommuner().count() }}
 					</td>
 					<td>
 						{{ fylke.monstringer[i].kommuner_registrert }}
-						<abbr title="av de {{ fylke.monstringer[i].kommuner_registrert + fylke.monstringer[i].kommuner_uregistrert }} kommunene i {{ fylke.info.getNavn() }} som skulle arrangere">
-							av {{ fylke.monstringer[i].kommuner_registrert + fylke.monstringer[i].kommuner_uregistrert }}
-						</abbr>
 					</td>
 					<td>{{ fylke.monstringer[i].registrert }}</td>
 					<td {{ fylke.monstringer[i].uregistrert > 0 ? 'class="text-danger"' : '' }}>
