--- a/twig/network/monstringer_per_fylke.html.twig
+++ b/twig/network/monstringer_per_fylke.html.twig
@@ -6,7 +6,7 @@
 		<thead>
 			<tr>
 				<th>År</th>
-				<th>Kommuner som <br />skulle arrangere</th>
+				<th>Antall kommuner</th>
 				<th>Komuner involvert <br />i en mønstring</th>
 				<th>Antall arrangerte<br />mønstringer</th>
 				<th class="text-danger">Uregistrerte<br />mønstringer</th>
