--- a/twig/network/kommuner_per_monstring.html.twig
+++ b/twig/network/kommuner_per_monstring.html.twig
@@ -8,6 +8,7 @@
 			<th>Komuner involvert <br />i en mønstring</th>
 			<th>Antall arrangerte<br />mønstringer</th>
 			<th>Kommuner i snitt per mønstring</th>
+			<th>Påmeldte</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -25,6 +26,9 @@
 					{% else %}
 						0
 					{% endif %}
+				</td>
+				<td>
+					{{ sesong.pameldte }}
 				</td>
 			</tr>
 		{% endfor %}
