uten major bugs

--- a/twig/network/monstringer_uregistrert.html.twig
+++ b/twig/network/monstringer_uregistrert.html.twig
@@ -1,9 +1,9 @@
 <h1>Uregistrerte mønstringer per fylke</h1>
 
 {% for fylke in fylker %}
-	<h2>{{ fylke.getNavn() }} <small>{{ fylke.monstringer_uregistrerte|length }} uregistrerte mønstringer</h2>
+	<h2>{{ fylke.getNavn() }} <small>{{ fylke.monstringer_uregistrerte|length }} uregistrerte mønstringer</h2>
     <p>
-        {% for monstring in monstringer_uregistrert %}
+        {% for monstring in fylke.monstringer_uregistrerte %}
             {{ monstring.getNavn() }}{{ not loop.last ? '<br /> ':'' }}
         {% endfor %}
     </p>
