print aktiv mønstring

--- a/twig/sms.html.twig
+++ b/twig/sms.html.twig
@@ -1,4 +1,4 @@
-<h2>Kontaktliste</h2>
+<h2>Kontaktliste {{ monstring.getNavn() }} {{ monstring.getSesong() }}</h2>
 <table class="table table-striped">
 	{% for person in personer %}
 		<tr>
