--- a/twig/dashboard.html.twig
+++ b/twig/dashboard.html.twig
@@ -1,6 +1,6 @@
 {% for kategori in rapporter.getAll() %}
 	<div class="row">
-		<img src="http://ico.ukm.no/{{ kategori.getIcon() }}-256.png" height="40" style="margin: 0px 8px 0px 15px" class="pull-left" border="0" />
+		<img src="//ico.ukm.no/{{ kategori.getIcon() }}-256.png" height="40" style="margin: 0px 8px 0px 15px" class="pull-left" border="0" />
 		<h2 style="margin: 7px 0px;">{{ kategori.getNavn() }}</h2>
 		<div class="clearfix"></div>
 	</div>
@@ -10,7 +10,7 @@
 				<li class="clickChildLink clickable col-xs-6 col-sm-4 col-md-3 col-lg-2">
 					<div class="well" style="background:#fff; padding:1%;">
 						<div style="display: inline-block; width:20%; padding:0px; vertical-align:top; margin:0px; min-height:100px;">
-							<img src="http://ico.ukm.no/{{ rapport.icon }}-256.png" width="45" style="float:left; max-width:90%" border="0" />
+							<img src="//ico.ukm.no/{{ rapport.icon }}-256.png" width="45" style="float:left; max-width:90%" border="0" />
 						</div>
 						<div style="display: inline-block; width:77%; padding:0px; margin:0px; min-height:100px;">
 							<p>
