Mulig å hente ut allergier per person

--- a/twig/festival/tilrettelegging.html.twig
+++ b/twig/festival/tilrettelegging.html.twig
@@ -1,6 +1,6 @@
-<h1>Allergier og tilrettelegging</h1>
+<h1>Behov for tilrettelegging</h1>
 
-<p>Excel-filen inneholder 2 ark, ett for mat-relaterte tilpasninger, og ett for øvrige. Informasjonen kommer fra videresendingsskjemaet, og blir oppdatert hver gang du laster inn denne siden.</p>
+<p>Informasjonen kommer fra videresendingsskjemaet, og blir oppdatert hver gang du laster inn denne siden.</p>
 <p>
 	<a href="{{excel_tilpasninger}}" class="btn btn-success">Last ned som excel-fil</a>
 </p>
