--- a/twig/festival/ledere.html.twig
+++ b/twig/festival/ledere.html.twig
@@ -20,5 +20,5 @@
 
 <h3>Kommaseparerte mobilnummer (for sms-funksjonen)</h3>
 <p>
-{% for leder in ledere if leder.l_mobilnummer is not empty and leder.l_mobilnummer is not 0 %}{{leder.l_mobilnummer}},{% endfor %}
+{% for leder in ledere if leder.l_mobilnummer is not empty and leder.l_mobilnummer != 0 %}{{leder.l_mobilnummer}},{% endfor %}
 </p>
