--- a/twig/AlleInnslag/tilpass.html.twig
+++ b/twig/AlleInnslag/tilpass.html.twig
@@ -66,7 +66,7 @@
     <div class="col-xs-12">
         {% embed "preview/list.html.twig" with {id: 'grupper', title: 'Hvordan skal det sorteres?' } %}
             {% block options %}
-                {% include "preview/option.html.twig" with {id: 'grupper', val: 'alfabetisk', title: 'Alfabetisk sortert'} %}
+                {% include "preview/option.html.twig" with {id: 'grupper', val: 'alfabetisk', title: 'Alfabetisk sortert', selected:true} %}
                 {% include "preview/option.html.twig" with {id: 'grupper', val: 'type', title: 'Gruppert etter type innslag', desc: 'deretter sortert alfabetisk'} %}
                 {% include "preview/option.html.twig" with {id: 'grupper', val: 'type_kommune', title: 'Gruppert etter type innslag og kommune', desc: 'Grupperes først i typer innslag, og deretter per kommune, før innslagene vises alfabetisk sortert'} %}
                 {% include "preview/option.html.twig" with {id: 'grupper', val: 'kommune', title: 'Gruppert etter kommune', desc: 'Grupperes per kommune, før innslagene vises alfabetisk sortert'} %}
