--- a/twig/rapport.html.twig
+++ b/twig/rapport.html.twig
@@ -4,7 +4,7 @@
             <h2>
                 Tilpass rapporten
                 <small>eller</small>
-                <button type="button" class="btn btn-default btn-sm openTemplateLoader">Åpne mal</button>
+                <button type="button" class="btn btn-default btn-sm showTemplateLoader">Åpne mal</button>
             </h2>
         </div>
     </div>
@@ -19,7 +19,7 @@
 </div>
 
 <div class="container-fluid" id="reportContainer" style="display:none;">
-    <button type="button" class="btn btn-default btn-sm openTemplateLoader">Åpne mal</button>
-    <button type="button" class="btn btn-default btn-sm showReportCustomizer">Vis/endre tilpasninger</button>
+    <button type="button" class="btn btn-default btn-sm showTemplateLoader">Åpne mal</button>
+    <button type="button" class="btn btn-default btn-sm showCustomizer">Vis/endre tilpasninger</button>
     <h2>Vennligst vent, genererer rapporten...</h2>
 </div>
