--- a/twig/Components/reportCustomizations.html.twig
+++ b/twig/Components/reportCustomizations.html.twig
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-12 col-sm-12">
         <button type="button" class="btn btn-primary btn-lg generateReport">Generer rapport</button>
-        <button type="button" class="btn btn-default saveCustomization" style="margin-left: 2em;">lagre som mal</button>
+        <button type="button" class="btn btn-default saveAsTemplate" style="margin-left: 2em;">lagre som mal</button>
 
     </div>
 </div>
