--- a/twig/rapport.html.twig
+++ b/twig/rapport.html.twig
@@ -1,4 +1,4 @@
-<div class="container-fluid" id="reportLoader" style="display:none;">
+<div class="container-fluid" id="reportLoader" style="display:none;" data-id="{{rapport.getId()}}">
     <div class="row">
         <div class="col-12 col-sm-12">
             <h2>
