--- a/twig/js/templatePicker.html.twig
+++ b/twig/js/templatePicker.html.twig
@@ -2,7 +2,8 @@
     {% for template in templates %}
         <li class="list-group-item template clickable" data-id="{{template.id}}">
             {{ template.name }}
-            <small class="text-muted">{{template.beskrivelse}}</small>
+            <small class="text-muted" data-id="{{template.id}}">{{template.beskrivelse}}</small>
+            <div class="clearfix"></div>
         </li>
     {% else %}
         <li class="list-group-item">
