Loader funker også

--- a/twig/Components/templateLoader.html.twig
+++ b/twig/Components/templateLoader.html.twig
@@ -6,7 +6,7 @@
         <div id="templatePicker"></div>
     </div>
 
-    <div class="col-12 col-sm-6" id="templateSaver" {#style="display:none;"#}>
+    <div class="col-12 col-sm-6" id="templateSaver" style="display:none;">
         <form>
             <h4>Lagre mal</h4>
             <div class="form-group templateSelector">
