--- a/twig/rapport.html.twig
+++ b/twig/rapport.html.twig
@@ -19,6 +19,11 @@
     </div>
 
     <div id="templateLoader" style="display:none;">
+        <div class="row">
+            <div class="col-12 col-sm-6" id="templatePicker"></div>
+        </div>
+    </div>
+    <div id="templateSaver" style="display:none;">
         {% include "templateLoader.html.twig" %}
     </div>
 </div>
