Nå kan vi også hente rapport-data

--- a/twig/Components/templateSaver.html.twig
+++ b/twig/Components/templateSaver.html.twig
@@ -22,6 +22,7 @@
 
             <div class="form-group">
                 <button type="button" class="btn btn-success saveTemplate">Lagre</button>
+                <button type="button" class="btn btn-default hideTemplatePicker" style="margin-left: 1.5em;">Lukk</button>
             </div>
         </form>
 
@@ -31,4 +32,3 @@
         </div>
     </div>
 </div>
-<button type="button" class="btn btn-default hideTemplateLoader">Lukk</button>
