--- a/twig/rapport.html.twig
+++ b/twig/rapport.html.twig
@@ -60,25 +60,25 @@
 
     <div class="row" id="reportActions" style="display:none; margin-bottom: 2em;">
         <div class="col-12 col-sm-12">
-            <button type="button" class="btn btn-default btn-sm showCustomizer">
+            <button type="button" class="btn btn-default btn-sm printReport">
                 <span class="dashicons dashicons-text-page"></span>
                 Skriv ut
             </button>
 
-            <button type="button" class="btn btn-default btn-sm showCustomizer">
+            <button type="button" class="btn btn-default btn-sm downloadWord">
                 <span class="dashicons dashicons-download"></span>
                 Last ned word-fil
             </button>
-            <button type="button" class="btn btn-default btn-sm showCustomizer">
+            <button type="button" class="btn btn-default btn-sm downloadExcel">
                 <span class="dashicons dashicons-download"></span>
                 Last ned excel-fil
             </button>
 
-            <button type="button" class="btn btn-default btn-sm showCustomizer" style="margin-left: 8em;">
+            <button type="button" class="btn btn-default btn-sm sendSMS" style="margin-left: 8em;">
                 <span class="dashicons dashicons-smartphone"></span>
                 Send sms
             </button>
-            <button type="button" class="btn btn-default btn-sm showCustomizer">
+            <button type="button" class="btn btn-default btn-sm sendEmail">
                 <span class="dashicons dashicons-email"></span>
                 Send e-post
             </button>
