--- a/twig/Components/Innslag/element.html.twig
+++ b/twig/Components/Innslag/element.html.twig
@@ -19,21 +19,35 @@
 				<td width="70" style="text-align:right;">
 					{% if innslag.getType().harTid() %}
 						{{ innslag.getVarighet().getHumanShort() }}
-					{% else %}
-						&nbsp;
+					{% elseif innslag.getType().erEnkeltperson() and config.show('kontaktperson') and config.show('kontakt_alder') %}
+                        {{innslag.getPersoner().getSingle().getAlder()}}
+                    {% else %}
+                        &nbsp;
 					{% endif %}
 				</td>
 			{% endif %}
 		</tr>
 
 		{% block beskrivelse %}
-			{% if config.show('beskrivelse') and innslag.getType().harBeskrivelse() %}
-				<tr>
-					<td colspan="{{maxCol}}">{{ innslag.getBeskrivelse() }}
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-					</td>
-				</tr>
-			{% endif %}
+            {% if config.show('beskrivelse') %}
+                <tr>
+                    {% if innslag.getType().harBeskrivelse() and innslag.getType().erEnkeltperson() and innslag.getType().harFunksjoner() %}
+                        <td>
+                            {{ innslag.getPersoner().getSingle().getRolle() }}
+                        </td>
+                        <td colspan="{{maxCol - 1}}">
+                            {{ innslag.getBeskrivelse() }}
+                        </td>
+                    {% elseif innslag.getType().erEnkeltperson() and innslag.getType().harFunksjoner() %}
+                        <td>
+                            {{ innslag.getPersoner().getSingle().getRolle() }}
+                        </td>
+                    {% elseif innslag.getType().harBeskrivelse() %}
+                        <td colspan="{{maxCol}}">{{ innslag.getBeskrivelse() }}</td>
+                    {% endif %}
+                </tr>
+            {% endif %}
+            
 		{% endblock %}
 
 		{% block titler %}
@@ -50,7 +64,7 @@
 		{% endblock %}
 
 		{% block personer %}
-			{% if config.show('deltakere') %}
+			{% if config.show('deltakere') and innslag.getType().erGruppe() %}
                 <tr>
                     <td colspan="{{maxCol}}" class="internalHeader">PERSONER</td>
                 </tr>
@@ -59,6 +73,17 @@
 						{% include "Components/Innslag/Personer/liste.html.twig" %}
 					</td>
 				</tr>
+            {% elseif config.show('deltakere') %}
+                <tr>
+                    <td>
+                        {% if config.show('deltakere_mobil') or (config.show('kontaktperson') and config.show('kontakt_mobil') ) %}
+                            {% include "Components/mobil.html.twig" with {mobil: innslag.getPersoner().getSingle().getMobil()} %}
+                        {% endif %}
+                        {% if config.show('kontaktperson') and config.show('kontakt_epost') %}
+                            - {% include "Components/epost.html.twig" with {epost: innslag.getPersoner().getSingle().getEpost() } %}
+                        {% endif %}
+                    </td>
+                </tr>
 			{% endif %}
 		{% endblock %}
 
